@@ -199,8 +199,13 @@ static VALUE evaluate(int argc, VALUE *argv, VALUE self)
       thing = NOKOGIRI_STR_NEW2(xpath->stringval);
       break;
     case XPATH_NODESET:
-      thing = Nokogiri_wrap_xml_node_set(xpath->nodesetval,
-        DOC_RUBY_OBJECT(ctx->doc));
+      if(NULL == xpath->nodesetval) {
+        thing = Nokogiri_wrap_xml_node_set(xmlXPathNodeSetCreate(NULL),
+          DOC_RUBY_OBJECT(ctx->doc));
+      } else {
+        thing = Nokogiri_wrap_xml_node_set(xpath->nodesetval,
+            DOC_RUBY_OBJECT(ctx->doc));
+      }
       break;
     case XPATH_NUMBER:
       thing = rb_float_new(xpath->floatval);
